# mageconv

./: .gitignore  README.md  app.py  cli.py  engine.py  main.py  pyproject.toml
templates/: _result.html  index.html
