[project]
name = "mageconv"
version = "0.1.0"
description = "Local-first, privacy-focused image converter (HEIC/PNG/JPEG -> WebP/JPEG)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mageconv" }]
dependencies = [
    "pillow>=10.3.0",
    "pillow-heif>=0.16.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
]

[project.scripts]
mageconv = "main:app"

[tool.uv]
package = false
